# who-woulda-won

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  tiebreak-test-notes.md  vercel.json
.claude/skills/analyze-example/: SKILL.md
.github/workflows/: tests.yml
api/: analyze.py  og_image.py  page.py
core/: __init__.py  analyze.py  kv.py  models.py  summarize.py
core/parsers/: __init__.py  base.py  danceconvention.py  eepro.py  scoring_dance.py
core/voting/: __init__.py  base.py  borda.py  relative_placement.py  schulze.py  sequential_irv.py
public/: about.html  app.js  gallery-data.js  gallery.html  index.html  site.webmanifest  styles.css
scripts/: anonymize_danceconvention.py  anonymize_eepro.py  anonymize_scoring_dance.py  check_new_scoresheets.py  dump_kv.py  gen_test_og.py  measure_template.py  seed_kv.py
templates/: index.html
tests/: __init__.py  conftest.py  test_analyze.py  test_analyze_kv.py  test_kv.py  test_models.py  test_og_image.py  test_summarize.py
tests/test_parsers/: conftest.py  test_danceconvention.py  test_detect.py  test_eepro.py  test_scoring_dance.py
tests/test_parsers/fixtures/: danceconvention-full-tie.json  danceconvention-ru.json  danceconvention.json  eepro-prelims-finals-same-page.html  eepro.html  scoring-dance.html
tests/test_voting/: conftest.py  test_borda.py  test_relative_placement.py  test_schulze.py  test_sequential_irv.py
