[tool.poetry]
name = "who-woulda-won"
version = "0.1.0"
description = "Compare how different voting systems would rank West Coast Swing competition results"
authors = []
readme = "examples/readme.md"
packages = [
    { include = "core" },
    { include = "api" },
]

[tool.poetry.dependencies]
python = "^3.11"
flask = ">=3.0.0"
httpx = ">=0.27.0"
beautifulsoup4 = ">=4.12.0"
lxml = ">=5.0.0"
pdfplumber = ">=0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
