[project]
name = "who-woulda-won"
version = "0.1.0"
description = "Compare how different voting systems would rank West Coast Swing competition results"
readme = "examples/readme.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pdfplumber>=0.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ipython",
]

[tool.poetry]
packages = [
    { include = "core" },
    { include = "api" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
